--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           submodules: true
 
-      - run: sudo apt-get install libgl1-mesa-dev
+      - run: sudo apt-get update && sudo apt-get install libgl1-mesa-dev
         # arcade is very slow to build. Limit to 1CPU due to huge memory requirement of
         # few files
       - run: make -f Makefile.libretro SUBTARGET=arcade -j1
