--- a/Makefile.docker
+++ b/Makefile.docker
@@ -1,5 +1,6 @@
 build-docker:
+	@# When using OPTIMIZE=0, compilation fails at the end
 	docker build -t piepacker/mame-builder .
-	docker run -v $(shell pwd):/build docker.io/piepacker/mame-builder make -C /build -f Makefile.libretro SUBTARGET=arcade STRIP_SYMBOLS=1 -j4
-	docker run -v $(shell pwd):/build docker.io/piepacker/mame-builder make -C /build -f Makefile.libretro SUBTARGET=tiny STRIP_SYMBOLS=1 -j2
-	@# docker run -ti -v $(shell pwd):/build docker.io/piepacker/mame-builder bash
+	docker run --rm=true -v $(shell pwd):/build docker.io/piepacker/mame-builder make -C /build -f Makefile.libretro SUBTARGET=arcade STRIP_SYMBOLS=1 REGENIE=1 OPTIMIZE=1 -j4
+	docker run --rm=true -v $(shell pwd):/build docker.io/piepacker/mame-builder make -C /build -f Makefile.libretro SUBTARGET=tiny STRIP_SYMBOLS=1 -j2
+	@# docker run --rm=true -ti -v $(shell pwd):/build docker.io/piepacker/mame-builder bash
